--- a/ProyectoFinal/src/main/resources/assets/ventanaPersonalEstudiante.fxml
+++ b/ProyectoFinal/src/main/resources/assets/ventanaPersonalEstudiante.fxml
@@ -13,7 +13,7 @@
                <children>
                   <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="252.0" prefWidth="297.0">
                      <children>
-                        <Label text="Bienvenido">
+                        <Label fx:id="bienvenidoLabel" text="Bienvenido">
                            <font>
                               <Font name="Bell MT" size="20.0" />
                            </font>
@@ -58,12 +58,12 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="252.0" prefWidth="299.0">
                <children>
-                  <VBox fx:id="requisitosDeGestionDeEstudianteVBox" alignment="CENTER" layoutX="1.0" prefHeight="252.0" prefWidth="296.0" spacing="10">
+                  <VBox fx:id="requisitosGestionVBox" alignment="TOP_CENTER" layoutX="1.0" prefHeight="252.0" prefWidth="296.0" spacing="10">
                      <opaqueInsets>
                         <Insets left="3.0" />
                      </opaqueInsets>
                      <padding>
-                        <Insets left="20.0" />
+                        <Insets left="20.0" top="30.0" />
                      </padding></VBox>
                </children></AnchorPane>
         </items>
