--- a/ProyectoFinal/src/main/resources/assets/ventanaEstudiantes.fxml
+++ b/ProyectoFinal/src/main/resources/assets/ventanaEstudiantes.fxml
@@ -94,13 +94,14 @@
                         <TableView fx:id="cursosRegistradosTableView" layoutX="1.0" layoutY="-1.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="369.0" prefWidth="600.0">
                           <columns>
                             <TableColumn fx:id="fechaCursoTableColumn" prefWidth="71.0" text="Fecha" />
-                              <TableColumn fx:id="horaCursoTableColumn" prefWidth="75.0" text="Hora" />
-                              <TableColumn fx:id="aulaCursoTableColumn" prefWidth="53.20001220703125" text="Aula" />
-                            <TableColumn fx:id="instrumentoCursoTableColumn" prefWidth="89.40000915527344" text="Instrumento" />
-                              <TableColumn fx:id="nivelCursoTableColumn" prefWidth="87.5999755859375" text="Nivel" />
-                              <TableColumn fx:id="estudiantesCursoTableColumn" prefWidth="73.5999755859375" text="Estudiantes" />
+                              <TableColumn fx:id="horaCursoTableColumn" prefWidth="42.199981689453125" text="Hora" />
+                              <TableColumn fx:id="aulaCursoTableColumn" prefWidth="38.20000457763672" text="Aula" />
+                            <TableColumn fx:id="instrumentoCursoTableColumn" prefWidth="89.79998779296875" text="Instrumento" />
+                              <TableColumn fx:id="nivelCursoTableColumn" prefWidth="66.4000244140625" text="Nivel" />
+                              <TableColumn fx:id="estudiantesCursoTableColumn" prefWidth="70.39996337890625" text="Estudiantes" />
                               <TableColumn fx:id="cuposCursoTableColumn" prefWidth="43.20001220703125" text="Cupos" />
-                              <TableColumn fx:id="profesorCursoTableColumn" prefWidth="109.5999755859375" text="Profesor" />
+                              <TableColumn fx:id="profesorCursoTableColumn" prefWidth="93.60000610351562" text="Profesor" />
+                              <TableColumn fx:id="codigoCursoTableColumn" prefWidth="84.0" text="Código" />
                           </columns>
                         </TableView>
                      </children></AnchorPane>
